# rules_rust_repro_splicing

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
sub/: Cargo.toml
